crates/plotnik-tests/tests/03-analyze/empty_constructs/empty_tree_with_comment.txt
Q = ( /* comment */ )
------------------ DIAGNOSTICS -------------------
error: empty `()` matches nothing
 --> query.ptk:1:5
  |
1 | Q = ( /* comment */ )
  |     ^^^^^^^^^^^^^^^^^
  |
help: use `(_)` to match any named node, or `_` for any node
-------------------- SYMBOLS ---------------------
